--- a/index.html
+++ b/index.html
@@ -1235,6 +1235,23 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+        /* === Compass Sprite Loader === */
+        .compass-loader {
+            display: inline-block;
+            width: 48px;
+            height: 48px;
+            background-image: url('https://sqlylxcnoqehorlgmztm.supabase.co/storage/v1/object/public/icons/icon/compass_atlas_icon.png');
+            background-repeat: no-repeat;
+            background-size: 480px 192px; /* 10 cols * 48px, 4 rows * 48px */
+            image-rendering: pixelated;
+            background-position: 0px 0px;
+            margin-bottom: 12px;
+        }
+        .bp-loading .compass-loader,
+        .news-loading .compass-loader {
+            margin-bottom: 12px;
+        }
+
 
         .news-empty {
             text-align: center;
@@ -3646,7 +3663,7 @@
 
                 <div id="bp-gallery">
                     <div class="bp-loading">
-                        <i class="fas fa-spinner"></i>
+                        <div class="compass-loader"></div>
                         <p data-ru="Загрузка..." data-en="Loading...">Загрузка...</p>
                     </div>
                 </div>
@@ -3900,7 +3917,7 @@
 
         async function loadNews() {
             if (!sbClient) return;
-            document.getElementById('news-container').innerHTML = '<div class="news-loading"><i class="fas fa-spinner fa-spin"></i></div>';
+            document.getElementById('news-container').innerHTML = '<div class="news-loading"><div class="compass-loader"></div></div>';
             try {
                 const result = await Promise.all([
                     sbClient.from('news').select('*').order('created_at', { ascending: false }).limit(50),
@@ -4134,7 +4151,7 @@
             const btn = event.currentTarget;
             const origHTML = btn.innerHTML;
             btn.disabled = true;
-            btn.innerHTML = '<i class="fas fa-spinner fa-spin"></i>';
+            btn.innerHTML = '<div class="compass-loader" style="width:24px;height:24px;background-size:240px 96px;margin:0 auto;"></div>';
             try {
                 const resp = await fetch(url);
                 if (!resp.ok) throw new Error('HTTP ' + resp.status);
@@ -4338,7 +4355,7 @@
                 container.innerHTML = '<div class="news-empty"><img src="https://sqlylxcnoqehorlgmztm.supabase.co/storage/v1/object/public/icons/icon/locked_icon.png" style="width:2rem;height:2rem;image-rendering:pixelated;object-fit:contain;margin-bottom:12px;display:block;margin-left:auto;margin-right:auto;"><p>Access denied</p></div>';
                 return;
             }
-            container.innerHTML = '<div class="news-loading"><i class="fas fa-spinner fa-spin"></i><p>Загрузка...</p></div>';
+            container.innerHTML = '<div class="news-loading"><div class="compass-loader"></div><p>Загрузка...</p></div>';
             const statusFilter = reportsCurrentFilter === 'pending' ? ['pending'] : ['approved', 'rejected'];
             const { data, error } = await sbClient.from('reports')
                 .select('*')
@@ -6256,7 +6273,7 @@
                 return;
             }
 
-            gallery.innerHTML = '<div class="bp-loading"><i class="fas fa-spinner"></i><p>Загрузка...</p></div>';
+            gallery.innerHTML = '<div class="bp-loading"><div class="compass-loader"></div><p>Загрузка...</p></div>';
             if (filtersEl) filtersEl.style.display = 'none';
 
             try {
@@ -6359,7 +6376,7 @@
             if (!confirm) return;
 
             btn.disabled = true;
-            btn.innerHTML = `<i class="fas fa-spinner fa-spin"></i> <span>${ru ? 'Удаление...' : 'Deleting...'}</span>`;
+            btn.innerHTML = `<div class="compass-loader" style="width:20px;height:20px;background-size:200px 80px;margin:0;display:inline-block;vertical-align:middle;"></div> <span>${ru ? 'Удаление...' : 'Deleting...'}</span>`;
 
             try {
                 const myPosts = JSON.parse(localStorage.getItem('bp_my_posts') || '[]');
@@ -6930,7 +6947,7 @@
 
             if (_galleryCache) { renderGalleryGrid(_galleryCache); return; }
 
-            gallery.innerHTML = '<div class="bp-loading"><i class="fas fa-spinner"></i><p>' + (currentLang === 'ru' ? 'Загрузка...' : 'Loading...') + '</p></div>';
+            gallery.innerHTML = '<div class="bp-loading"><div class="compass-loader"></div><p>' + (currentLang === 'ru' ? 'Загрузка...' : 'Loading...') + '</p></div>';
 
             try {
                 const { data, error } = await sbClient.from('gallery')
@@ -7230,7 +7247,7 @@
             if (!window.confirm(ru ? 'Удалить это фото?' : 'Delete this photo?')) return;
 
             btn.disabled = true;
-            btn.innerHTML = `<i class="fas fa-spinner fa-spin"></i> <span>${ru ? 'Удаление...' : 'Deleting...'}</span>`;
+            btn.innerHTML = `<div class="compass-loader" style="width:20px;height:20px;background-size:200px 80px;margin:0;display:inline-block;vertical-align:middle;"></div> <span>${ru ? 'Удаление...' : 'Deleting...'}</span>`;
 
             try {
                 // Delete from DB and check result (like deleteBuildplate)
@@ -7328,6 +7345,53 @@
 
     </script>
 
+
+
+    <script>
+    // === Compass Sprite Animation ===
+    (function() {
+        const COMPASS_URL = 'https://sqlylxcnoqehorlgmztm.supabase.co/storage/v1/object/public/icons/icon/compass_atlas_icon.png';
+        const FRAME_COUNT = 32;
+        const COLS = 10;
+        const SIZE = 48;
+        const FPS = 16; // smooth rotation
+
+        function animateCompass(el) {
+            let frame = 0;
+            const id = setInterval(() => {
+                if (!document.contains(el)) { clearInterval(id); return; }
+                const col = frame % COLS;
+                const row = Math.floor(frame / COLS);
+                el.style.backgroundPosition = (-col * SIZE) + 'px ' + (-row * SIZE) + 'px';
+                frame = (frame + 1) % FRAME_COUNT;
+            }, Math.round(1000 / FPS));
+            el._compassIntervalId = id;
+        }
+
+        // Observe DOM for new compass-loader elements
+        const observer = new MutationObserver(mutations => {
+            mutations.forEach(m => {
+                m.addedNodes.forEach(node => {
+                    if (!node.querySelectorAll) return;
+                    node.querySelectorAll('.compass-loader').forEach(el => {
+                        if (!el._compassIntervalId) animateCompass(el);
+                    });
+                    if (node.classList && node.classList.contains('compass-loader') && !node._compassIntervalId) {
+                        animateCompass(node);
+                    }
+                });
+            });
+        });
+        observer.observe(document.body, { childList: true, subtree: true });
+
+        // Animate any already-in-DOM compasses on load
+        document.addEventListener('DOMContentLoaded', () => {
+            document.querySelectorAll('.compass-loader').forEach(el => {
+                if (!el._compassIntervalId) animateCompass(el);
+            });
+        });
+    })();
+    </script>
 
 </body>
 </html>
