--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
             color: #3e2723;
             cursor: pointer;
             border-radius: 0;
-            font-weight: 700;
+            font-weight: 400;
             font-size: 10px;
             transition: all 0.15s;
             position: relative;
@@ -761,7 +761,7 @@
             -webkit-font-smoothing: none;
             -moz-osx-font-smoothing: unset;
             text-rendering: optimizeSpeed;
-            text-shadow: 0.5px 0 0 currentColor, -0.5px 0 0 currentColor;
+            text-shadow: none;
             display: flex;
             flex-direction: column;
             align-items: center;
