--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revival Minecraft Earth</title>
-    <link rel="icon" type="image/png" href="https://mcearthproject.qzz.io/favicon.ico">
+    <link rel="icon" type="image/png" href="https://sqlylxcnoqehorlgmztm.supabase.co/storage/v1/object/public/icons/icon/favicon.ico">
     <style>
         /* Minecraft Five — основной шрифт */
         @font-face {
@@ -64,7 +64,7 @@
     <meta property="og:description" content="An AR project to revive Minecraft Earth using the Vienna Docker">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://mcearthproject.qzz.io/">
-    <meta property="og:image" content="https://mcearthproject.qzz.io/favicon.ico">
+    <meta property="og:image" content="https://sqlylxcnoqehorlgmztm.supabase.co/storage/v1/object/public/icons/icon/favicon.ico">
     
     
     <meta name="twitter:card" content="summary">
